--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_activity.xml
@@ -54,21 +54,27 @@
         android:layout_below="@+id/toolbar"
         android:background="@color/light_underline" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbarUnderline">
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:id="@+id/swipe_refresh_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/toolbarUnderline">-->
 
-        <com.mycity4kids.observablescrollview.ObservableListView
-            android:id="@+id/scroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:background="@color/white"
-            android:divider="@color/transparent"
-            android:drawSelectorOnTop="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <!--<com.mycity4kids.observablescrollview.ObservableListView-->
+            <!--android:id="@+id/scroll"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_below="@+id/toolbar"-->
+            <!--android:background="@color/white"-->
+            <!--android:divider="@color/transparent"-->
+            <!--android:drawSelectorOnTop="true" />-->
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbarUnderline" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/noBlogsTextView"
