--- a/MyCity4Kids/MyCity4Kids/res/layout/best_in_your_city_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/best_in_your_city_activity.xml
@@ -16,22 +16,11 @@
         fab:theme="@style/FilterToobar"
         fab:titleTextAppearance="@style/ToolbarTheme.Title" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar">
-
-        <ListView
-            android:id="@+id/scroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:layout_marginTop="2dp"
-            android:background="@color/grey_light"
-            android:divider="@color/transparent"
-            android:drawSelectorOnTop="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar" />
 
     <TextView
         android:id="@+id/noBlogsTextView"
