--- a/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
@@ -34,7 +34,7 @@
         android:id="@+id/followUnfollowTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/swipe_refresh_layout"
+        android:layout_above="@+id/recyclerView"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/toolbar"
         android:gravity="center"
@@ -43,22 +43,28 @@
         android:textColor="@color/toolbar.menu_items"
         android:visibility="gone" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/titleTextView">
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:id="@+id/swipe_refresh_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/titleTextView">-->
 
-        <ListView
-            android:id="@+id/scroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:layout_marginTop="2dp"
-            android:background="@color/grey_light"
-            android:divider="@color/transparent"
-            android:drawSelectorOnTop="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <!--<ListView-->
+            <!--android:id="@+id/scroll"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_below="@+id/toolbar"-->
+            <!--android:layout_marginTop="2dp"-->
+            <!--android:background="@color/grey_light"-->
+            <!--android:divider="@color/transparent"-->
+            <!--android:drawSelectorOnTop="true" />-->
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar" />
 
     <TextView
         android:id="@+id/noBlogsTextView"
@@ -126,7 +132,7 @@
             android:id="@+id/fab_menu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/scroll"
+            android:layout_alignBottom="@+id/recyclerView"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_gravity="right|bottom"
