--- a/MyCity4Kids/MyCity4Kids/res/layout/momspresso_videos_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/momspresso_videos_tab_fragment.xml
@@ -5,14 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.mycity4kids.observablescrollview.ObservableListView
-        android:id="@+id/scroll"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:background="@color/grey_light"
-        android:divider="@color/transparent"
-        android:drawSelectorOnTop="true" />
+        android:layout_below="@+id/toolbar" />
 
     <TextView
         android:id="@+id/noBlogsTextView"
