--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
@@ -17,21 +17,27 @@
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar">
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:id="@+id/swipe_refresh_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/toolbar">-->
 
-        <com.mycity4kids.observablescrollview.ObservableListView
-            android:id="@+id/scroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:background="@color/grey_light"
-            android:divider="@color/transparent"
-            android:drawSelectorOnTop="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <!--<com.mycity4kids.observablescrollview.ObservableListView-->
+            <!--android:id="@+id/scroll"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_below="@+id/toolbar"-->
+            <!--android:background="@color/grey_light"-->
+            <!--android:divider="@color/transparent"-->
+            <!--android:drawSelectorOnTop="true" />-->
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/noBlogsTextView"
@@ -102,7 +108,7 @@
             android:id="@+id/fab_menu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/scroll"
+            android:layout_alignBottom="@+id/recyclerView"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_gravity="right|bottom"
