Toplink navigation icon + FB ads in listing fix + Suggested Topic deeplink and GTM fix

--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_activity.xml
@@ -20,29 +20,40 @@
             android:layout_height="wrap_content"
             android:visibility="visible">
 
+            <ImageView
+                android:id="@+id/menuImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:src="@drawable/hamburger_menu" />
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/toolbarTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/menuImageView"
                 android:text="dwadawdadaw dwad"
                 android:textColor="@color/various_list.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
-            <ImageView
-                android:id="@+id/downArrowImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/toolbarTitle"
-                android:layout_toRightOf="@+id/toolbarTitle"
-                android:paddingBottom="15dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="15dp"
-                android:src="@drawable/arrow_bluexxhdpidown"
-                android:tint="#507cbe" />
+            <!--<ImageView-->
+            <!--android:id="@+id/downArrowImageView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_toEndOf="@+id/toolbarTitle"-->
+            <!--android:layout_toRightOf="@+id/toolbarTitle"-->
+            <!--android:paddingBottom="15dp"-->
+            <!--android:paddingLeft="10dp"-->
+            <!--android:paddingRight="10dp"-->
+            <!--android:paddingTop="15dp"-->
+            <!--android:src="@drawable/arrow_bluexxhdpidown"-->
+            <!--android:tint="#507cbe" />-->
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
@@ -55,19 +66,19 @@
         android:background="@color/light_underline" />
 
     <!--<android.support.v4.widget.SwipeRefreshLayout-->
-        <!--android:id="@+id/swipe_refresh_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/toolbarUnderline">-->
+    <!--android:id="@+id/swipe_refresh_layout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/toolbarUnderline">-->
 
-        <!--<com.mycity4kids.observablescrollview.ObservableListView-->
-            <!--android:id="@+id/scroll"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_below="@+id/toolbar"-->
-            <!--android:background="@color/white"-->
-            <!--android:divider="@color/transparent"-->
-            <!--android:drawSelectorOnTop="true" />-->
+    <!--<com.mycity4kids.observablescrollview.ObservableListView-->
+    <!--android:id="@+id/scroll"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_below="@+id/toolbar"-->
+    <!--android:background="@color/white"-->
+    <!--android:divider="@color/transparent"-->
+    <!--android:drawSelectorOnTop="true" />-->
     <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
     <android.support.v7.widget.RecyclerView
