--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -20,11 +20,22 @@
             android:layout_height="wrap_content"
             android:visibility="visible">
 
+            <ImageView
+                android:id="@+id/menuImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:src="@drawable/hamburger_menu" />
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/toolbarTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/menuImageView"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:text="@string/home.toolbar.title"
@@ -64,7 +75,8 @@
                 android:paddingRight="10dp"
                 android:paddingTop="15dp"
                 android:src="@drawable/arrow_bluexxhdpidown"
-                android:tint="#507cbe" />
+                android:tint="#507cbe"
+                android:visibility="gone" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/readAllTextView"
