--- a/MyCity4Kids/MyCity4Kids/res/layout/id_token_login_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/id_token_login_activity.xml
@@ -4,44 +4,49 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/shavetLogin"
+    <LinearLayout
+        android:id="@+id/userContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="Login with Shavet"
-        android:textSize="16sp" />
+        android:orientation="vertical" />
+    <!--<TextView-->
+    <!--android:id="@+id/shavetLogin"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:padding="20dp"-->
+    <!--android:text="Login with Shavet"-->
+    <!--android:textSize="16sp" />-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black" />
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:background="@color/black" />-->
 
-    <TextView
-        android:id="@+id/monikaLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="Login with Monikaa"
-        android:textSize="16sp" />
+    <!--<TextView-->
+    <!--android:id="@+id/monikaLogin"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:padding="20dp"-->
+    <!--android:text="Login with Monikaa"-->
+    <!--android:textSize="16sp" />-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black" />
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:background="@color/black" />-->
 
-    <TextView
-        android:id="@+id/priyankaLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="Login with Priyanka"
-        android:textSize="16sp" />
+    <!--<TextView-->
+    <!--android:id="@+id/priyankaLogin"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:padding="20dp"-->
+    <!--android:text="Login with Priyanka"-->
+    <!--android:textSize="16sp" />-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black" />
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:background="@color/black" />-->
 
     <EditText
         android:id="@+id/idEditText"
