--- a/MyCity4Kids/MyCity4Kids/res/layout/splash_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/splash_activity.xml
@@ -1,8 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootLayout"
-    android:background="@drawable/splash">
+    android:background="@color/white">
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/momspresso_logo" />
 
     <RelativeLayout
         android:id="@+id/lout"
