--- a/MyCity4Kids/MyCity4Kids/res/layout/id_token_login_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/id_token_login_activity.xml
@@ -1,80 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/userContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" />
-    <!--<TextView-->
-    <!--android:id="@+id/shavetLogin"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:padding="20dp"-->
-    <!--android:text="Login with Shavet"-->
-    <!--android:textSize="16sp" />-->
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:background="@color/black" />-->
+        <LinearLayout
+            android:id="@+id/userContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+        <!--<TextView-->
+        <!--android:id="@+id/shavetLogin"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:padding="20dp"-->
+        <!--android:text="Login with Shavet"-->
+        <!--android:textSize="16sp" />-->
 
-    <!--<TextView-->
-    <!--android:id="@+id/monikaLogin"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:padding="20dp"-->
-    <!--android:text="Login with Monikaa"-->
-    <!--android:textSize="16sp" />-->
+        <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/black" />-->
 
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:background="@color/black" />-->
+        <!--<TextView-->
+        <!--android:id="@+id/monikaLogin"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:padding="20dp"-->
+        <!--android:text="Login with Monikaa"-->
+        <!--android:textSize="16sp" />-->
 
-    <!--<TextView-->
-    <!--android:id="@+id/priyankaLogin"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:padding="20dp"-->
-    <!--android:text="Login with Priyanka"-->
-    <!--android:textSize="16sp" />-->
+        <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/black" />-->
 
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:background="@color/black" />-->
+        <!--<TextView-->
+        <!--android:id="@+id/priyankaLogin"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:padding="20dp"-->
+        <!--android:text="Login with Priyanka"-->
+        <!--android:textSize="16sp" />-->
 
-    <EditText
-        android:id="@+id/idEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="Id"
-        android:padding="10dp"
-        android:textColor="@color/black" />
+        <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/black" />-->
 
-    <EditText
-        android:id="@+id/tokenEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="Id"
-        android:padding="10dp"
-        android:textColor="@color/black" />
+        <EditText
+            android:id="@+id/idEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Id"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/loginTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="Login"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        <EditText
+            android:id="@+id/tokenEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Id"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/loginTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="Login"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+</ScrollView>
